--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Bem vindo(a) ao SisMed.</h1>
+                <h1>Bem vindo(a) ao Sgu.</h1>
             </div>
         </div>
     </div><!-- /.container-fluid -->
